--- a/ros2/tsdf_plusplus_lib_ros2/CMakeLists.txt
+++ b/ros2/tsdf_plusplus_lib_ros2/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(Glog REQUIRED)
 find_package(pcl_conversions REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
-set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall --std=c++11 -O3 -fPIC" )
+set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall --std=c++17 -O3 -fPIC" )
 set( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -O3 -fPIC" )
 
 ####################
@@ -17,14 +17,14 @@ set( CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -Wall -O3 -fPIC" )
 ####################
 
 set("${PROJECT_NAME}_SRCS"
-  ../tsdf_plusplus/src/alignment/icp.cc
-  ../tsdf_plusplus/src/core/object_volume.cc
-  ../tsdf_plusplus/src/core/map.cc
-  ../tsdf_plusplus/src/core/segment.cc
-  ../tsdf_plusplus/src/integrator/integrator.cc
-  ../tsdf_plusplus/src/mesh/color_map.cc
-  ../tsdf_plusplus/src/mesh/mesh_integrator.cc
-  ../tsdf_plusplus/src/visualizer/visualizer.cc
+  ../../tsdf_plusplus/src/alignment/icp.cc
+  ../../tsdf_plusplus/src/core/object_volume.cc
+  ../../tsdf_plusplus/src/core/map.cc
+  ../../tsdf_plusplus/src/core/segment.cc
+  ../../tsdf_plusplus/src/integrator/integrator.cc
+  ../../tsdf_plusplus/src/mesh/color_map.cc
+  ../../tsdf_plusplus/src/mesh/mesh_integrator.cc
+  ../../tsdf_plusplus/src/visualizer/visualizer.cc
 )
 
 
@@ -33,12 +33,11 @@ set("${PROJECT_NAME}_SRCS"
 ############
 
 include_directories(
-  ../tsdf_plusplus/include
+  ../../tsdf_plusplus/include
   ${PCL_INCLUDE_DIRS}
   ${GLOG_INCLUDE_DIRS}
   ${GFLAGS_INCLUDE_DIRS}
   ${voxblox_INCLUDE_DIRS}
-  ${voxblox_msgs_INCLUDE_DIRS}
   ${pcl_conversions_INCLUDE_DIRS}
 )
 
@@ -46,7 +45,7 @@ include_directories(
 add_library (${PROJECT_NAME} ${${PROJECT_NAME}_SRCS})
 target_include_directories(${PROJECT_NAME}
   PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../tsdf_plusplus/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../tsdf_plusplus/include>
     $<INSTALL_INTERFACE:include>)
 
 ament_export_targets(export_${PROJECT_NAME} HAS_LIBRARY_TARGET)
@@ -62,12 +61,12 @@ install(
 )
 
 install(
-  DIRECTORY ../tsdf_plusplus/include/
+  DIRECTORY ../../tsdf_plusplus/include/
   DESTINATION include/
 )
 
 
 ament_export_include_directories(include)
-ament_export_libraries(tsdf_plusplus)
+ament_export_libraries(${PROJECT_NAME})
 ament_export_dependencies(${dependencies})
 ament_package()
