--- a/docker/dockerfiles/desktop/Dockerfile
+++ b/docker/dockerfiles/desktop/Dockerfile
@@ -13,7 +13,7 @@ RUN sudo apt update \
         software-properties-common curl apache2-utils \
         supervisor nginx sudo net-tools zenity xz-utils \
         dbus-x11 x11-utils alsa-utils curl ca-certificates gnupg patch \
-        mesa-utils libgl1-mesa-dri ffmpeg \
+        mesa-utils libgl1-mesa-dri ffmpeg tmux \
         lxde gtk2-engines-murrine gnome-themes-standard gtk2-engines-pixbuf gtk2-engines-murrine arc-theme \
         xvfb x11vnc libcanberra-gtk-module libcanberra-gtk3-module \
         vim-tiny sudo firefox-geckodriver ttf-ubuntu-font-family ttf-wqy-zenhei  \
